[package]
name = "sql-ast"
description = "A lean sql AST and parser"
version = "0.7.6"
authors = ["Andy Grove <andygrove73@gmail.com>", "Jovansonlee Cesar <ivanceras@gmail.com>"]
homepage = "https://github.com/ivanceras/sqlparser-preview"
documentation = "https://docs.rs/sql-ast"
keywords = [ "ansi", "sql", "lexer", "parser" ]
repository = "https://github.com/ivanceras/sql-ast"
license = "Apache-2.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2018"

[dependencies]
bigdecimal = { version = "0.4.3", optional = true }
log = "0.4.5"

[dev-dependencies]
simple_logger = "1.0.1"
matches = "0.1"
